name:                hreadings
version:             0.0.1
synopsis:            Device readings web service
homepage:            https://github.com/rohshall/hreadings
license:             MIT
author:              Salil Wadnerkar
maintainer:          rohshall@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable hreadings
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , persistent-postgresql
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , monad-logger
